# libkcapi

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  COPYING  Makefile  Makefile.am  README  README.md  TODO  configure.ac  cryptouser.h  kcapi-kernel-if.c  kcapi.h  libkcapi.pc.in  libkcapi.spec
.github/workflows/: checks.yml
apps/: .gitignore  Makefile  app-internal.c  app-internal.h  kcapi-dgst.1  kcapi-dgst.c  kcapi-enc.1  kcapi-enc.c  kcapi-hasher.1  kcapi-hasher.c  kcapi-rng.1  kcapi-rng.c  sum
apps/test/: hasher-test.sh
doc/: gendocs.sh  libkcapi.tmpl
kernel-patch/: 0000-cover-letter.patch  0001-crypto-AF_ALG-add-user-space-interface-for-AEAD.patch  0002-crypto-AF_ALG-user-space-interface-for-cipher-info.patch  0005-crypto-AF_ALG-add-AEAD-support.patch  0007-crypto-AF_ALG-add-random-number-generator-support.patch  README  add-aead-algif_skcipher.diff  v10-0000-cover-letter.patch  v10-0001-crypto-AF_ALG-add-AEAD-support.patch  v11-0000-cover-letter.patch  v11-0001-crypto-AF_ALG-add-AEAD-support.patch  v12-0001-crypto-AF_ALG-add-AEAD-support.patch  v12-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v13-0000-cover-letter.patch  v13-0001-crypto-AF_ALG-add-AEAD-support.patch  v2-0002-crypto-AF_ALG-user-space-interface-for-cipher-inf.patch  v2-0003-crypto-AF_ALG-extend-data-structuers-for-AEAD.patch  v2-0005-crypto-AF_ALG-add-AEAD-support.patch  v2-0007-crypto-AF_ALG-add-random-number-generator-support.patch  v2-0008-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v2-0009-crypto-AF_ALG-user-space-interface-for-hash-info.patch  v2-0010-crypto-AF_ALG-document-the-user-space-interface.patch  v3-0000-cover-letter.patch  v3-0005-crypto-AF_ALG-add-random-number-generator-support.patch  v3-0006-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v3-0007-crypto-AF_ALG-document-the-user-space-interface.patch  v4-0000-cover-letter.patch  v4-0002-crypto-AF_ALG-add-AEAD-support.patch  v4-0003-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v4-0004-crypto-AF_ALG-add-random-number-generator-support.patch  v5-0000-cover-letter.patch  v5-0003-crypto-AF_ALG-add-AEAD-support.patch  v5-0004-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v5-0005-crypto-AF_ALG-add-user-space-interface-for-RNG.patch  v6-0000-cover-letter.patch  v6-0001-crypto-AF_ALG-add-AEAD-support.patch  v6-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v6-0003-crypto-AF_ALG-add-random-number-generator-support.patch  v6-0004-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v7-0000-cover-letter.patch  (+5 more)
kernel-patch/aead/: Makefile  algif_aead.c
kernel-patch/attic/: 0003-crypto-AF_ALG-extend-data-structuers-for-AEAD.patch  0004-crypto-AF_ALG-crypto-API-calls-to-inline-functions.patch  0006-crypto-AF_ALG-make-setkey-optional.patch  0008-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v10-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v11-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v12-0000-cover-letter.patch  v13-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v2-0000-cover-letter.patch  v2-0001-crypto-AF_ALG-add-user-space-interface-for-AEAD.patch  v2-0004-crypto-AF_ALG-crypto-API-calls-to-inline-function.patch  v2-0006-crypto-AF_ALG-make-setkey-optional.patch  v3-0001-crypto-AF_ALG-add-user-space-interface-for-AEAD.patch  v3-0002-crypto-AF_ALG-extend-data-structuers-for-AEAD.patch  v3-0003-crypto-AF_ALG-crypto-API-calls-to-inline-function.patch  v3-0004-crypto-AF_ALG-add-AEAD-support.patch  v4-0000-cover-letter.patch  v4-0001-crypto-AF_ALG-add-user-space-interface-for-AEAD.patch  v4-0005-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v5-0001-crypto-AF_ALG-add-user-space-interface-for-AEAD.patch  v5-0002-crypto-AF_ALG-add-setsockopt-for-auth-tag-size.patch  v5-0006-crypto-AF_ALG-zeroize-key-seed-data.patch  v5-0007-crypto-AF_ALG-add-random-number-generator-support.patch  v5-0008-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v6-0001-crypto-AF_ALG-add-AEAD-support.patch  v6-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v6-0003-crypto-AF_ALG-add-random-number-generator-support.patch  v6-0004-crypto-AF_ALG-enable-RNG-interface-compilation.patch  v8-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch  v9-0001-crypto-AF_ALG-add-AEAD-support.patch  v9-0002-crypto-AF_ALG-enable-AEAD-interface-compilation.patch
kernel-patch/rng/: Makefile  algif_rng.c
kernel-patches/4.14-rc1/: README.md
kernel-patches/4.14-rc1/asym/: v9-0000-cover-letter.patch  v9-0001-crypto-AF_ALG-add-sign-verify-API.patch  v9-0002-crypto-AF_ALG-add-setpubkey-setsockopt-call.patch  v9-0003-crypto-AF_ALG-add-asymmetric-cipher.patch
kernel-patches/4.14-rc1/kpp/: v2-0000-cover-letter.patch  v2-0001-crypto-AF_ALG-add-DH-keygen-ssgen-API.patch  v2-0002-crypto-AF_ALG-add-DH-param-ECDH-curve-setsockopt-.patch  v2-0003-crypto-AF_ALG-eliminate-code-duplication.patch  v2-0004-crypto-KPP-add-API-crypto_kpp_set_params.patch  v2-0005-crypto-DH-allow-params-and-key-to-be-set-independ.patch  v2-0006-crypto-DH-add-PKCS-3-parameter-handling.patch  v2-0007-crypto-ecdh-constify-key.patch  (+1 more)
kernel-patches/4.15-rc3/: README.md
lib/: .gitignore  Makefile  atomic.h  cryptouser.h  internal.h  internal_bswap.h  kcapi-aead.c  kcapi-asym.c  kcapi-kdf.c  kcapi-kernel-if.c  kcapi-kpp.c  kcapi-md.c  kcapi-rng.c  kcapi-sym.c  kcapi-utils.c  kcapi.h  kcapi_aio.h  kdf.c  version.lds
lib/doc/: .gitignore  Makefile.am  libkcapi.tmpl
m4/: ac_check_api_version.m4  ax_check_pie.m4
rng/: algif-rng.c
speed-test/: .gitignore  Makefile  cryptoperf-aead.c  cryptoperf-base.c  cryptoperf-hash.c  cryptoperf-main.c  cryptoperf-rng.c  cryptoperf-skcipher.c  cryptoperf.h
test/: .gitignore  Makefile  Makefile.m32  README  README.md  compile-test.sh  hasher-test.sh  kcapi-convenience.c  kcapi-convenience.sh  kcapi-dgst-test.sh  kcapi-enc-test-large.c  kcapi-enc-test-large.sh  kcapi-enc-test.sh  kcapi-fuzz-test.sh  kcapi-main.c  kcapi-md-convenience.c  libtest.sh  test-invocation.sh  test.sh  virttest.sh
test-large/: Makefile  README  kcapi-oneshot.c  test.sh
(+26 files in other folders)
